CHANGES
*******

0.3dev (Unreleased)
===================

* Bugfix: ExtDirectStore returns wrong 'total' parameter

0.2 (2009-09-11)
================

* Faulty setup.py

0.1 (2009-09-11)
================

* Initial public release
